--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.1",
+    "gulp-shell": "^0.5.2",
     "webpack": "^1.13.1"
   },
   "name": "ChaurasiaPindDaan",
