[KS] - Added api folder for rest api service

--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
   },
   "main": "./app.js",
   "dependencies": {
-    "express": "^4.10.6",
-    "method-override": "^2.3.1",
-    "cookie-parser": "^1.3.3",
-    "express-session": "^1.10.0",
-    "superagent": "^0.21.0",
-    "glob": "~3.2.8",
-    "tick": "0.0.4",
-    "jade": "~1.9.2",
-    "express-react-views": "0.9.0",
-    "debug": "~0.7.4",
+    "async": "^0.9.0",
     "colors": "~0.6.2",
+    "cookie-parser": "^1.3.3",
+    "debug": "~0.7.4",
+    "express": "^4.10.6",
+    "express-react-views": "0.9.0",
+    "express-session": "^1.10.0",
+    "glob": "~3.2.8",
+    "jade": "~1.9.2",
+    "lodash": "^3.10.0",
+    "method-override": "^2.3.1",
     "moment": "~2.5.1",
     "moment-timezone": "0.0.3",
-    "redis": "~0.12.0",
-    "lodash": "^3.10.0",
-    "async": "^0.9.0",
-    "monk": "1.0.1",
     "mongodb": "~2.0.33",
+    "monk": "1.0.1",
+    "node-mysql": "^0.4.2",
     "react": "0.14.3",
-    "react-dom": "0.14.3"
+    "react-dom": "0.14.3",
+    "redis": "~0.12.0",
+    "superagent": "^0.21.0",
+    "tick": "0.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
